# pytech-summit-2024-spring

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
backend/: .gitignore  pyproject.toml  settings.yaml
backend/config/: settings.py  urls.py
backend/courses/: serializers.py  views.py
backend/courses/migrations/: 0001_initial.py
backend/docker/django/: Dockerfile
backend/docker/redis/: Dockerfile
config/: settings.py
courses/: models.py  serializers.py  serializers_dicts.py  urls.py  views.py
courses/migrations/: 0002_video_length.py
docker/django/: Dockerfile  start
docker/otel/: otel-collector-config.yaml
docker/redis/: redis.conf
frontend/: package-lock.json
frontend/docker/: Dockerfile
frontend/src/: App.js  PlaylistSender.css  PlaylistSender.js
